# mini-scrappy

./: .gitignore  README.md  pyproject.toml
mini_scrappy_sdk/: __init__.py  downloader.py  engine.py  logger.py  scheduler.py  types.py
mini_scrappy_sdk/spider/: base_spider.py  example_spider.py  ptt_spider.py
output/: ptt.csv
test/: test_example_spider.py  test_ptt_spider.py
